# Modbus-Gateway

./: AZURE_IOT_HUB_SETUP_GUIDE.md  CLAUDE.md  GPIO  Usage.txt  LESSON_PREVENTING_LOG_INTERLEAVING.md  README.md  SENSOR_REMOTE_CONFIG_FORMAT.md  sdkconfig  ● Complete System Behavior Explanat.txt
.claude/skills/: README.md  color-typography.md  css-layout-alignment.md  modern-web-patterns.md  responsive-design.md  ui-design.md
main/: CMakeLists.txt  a7670c_ppp.c  ds3231_rtc.c  iot_configs.h  json_templates.c  main.c  modbus.c  sd_card_logger.c  sensor_manager.c  sensor_manager.h  web_config.c  web_config.h
skills/: README.md  azure_iothub.md  modbus.md
